--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Probleminha Diário - L7nnon,Mc Hariel 
+Probleminha Diário - L7nnon e Mc Hariel 
 
 Ela falou que gosta de flores
 Coloquei 40 grama dentro do buque
