--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <h1>Probleminha Diário - L7nnon e Mc Hariel </h1>
 <br/>
-Ela falou que gosta de flores
-Coloquei 40 grama dentro do buque
+<p>Ela falou que gosta de flores
+Coloquei 40 grama dentro do buque</p>
+<br/>
 Uma obra de arte, eu assinei com um tapão
 Ela que pediu, eu só segui a extrusão
 Vem com a novidade em questão de posição
