--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <h1>Probleminha Diário - L7nnon e Mc Hariel </h1>
 <br/>
 <p>Ela falou que gosta de flores
-Coloquei 40 grama dentro do buque</p>
-<br/>
+Coloquei 40 grama dentro do buque
 Uma obra de arte, eu assinei com um tapão
 Ela que pediu, eu só segui a extrusão
 Vem com a novidade em questão de posição
 E ela breca e acelera o jogo, eu só vou no embalão
 E a fita é o proibidão mesmo
-Ela quer que nós joga dentro
+Ela quer que nós joga dentro</p>
 A melodia é tranquilona
 Ela senta com violência
 Ela pede tapa na venta
@@ -22,7 +21,7 @@ Que tem o dom das palavra
 Eu fico querendo revanche
 Mas ela nem se intromete
 Ela senta no meu colo
-E eu só digo alase
+E eu só digo aulas
 Ela é meu probleminha diário
 Que eu sempre gosto de resolver
 Parou de responder os o'tário
