--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ Vem com a novidade em questão de posição
 E ela breca e acelera o jogo, eu só vou no embalão
 E a fita é o proibidão mesmo
 Ela quer que nós joga dentro</p>
-A melodia é tranquilona
+<p>A melodia é tranquilona
 Ela senta com violência
 Ela pede tapa na venta
 Ela só quer catucadão
-Sussurra, vai com força
+Sussurra, vai com força</p>
 Quem tem dó é violão
 E ela quer os brother do Funk
 Ela curtiu os cara do Rap
