--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@ Ela senta com violência
 Ela pede tapa na venta
 Ela só quer catucadão
 Sussurra, vai com força</p>
-Quem tem dó é violão
+<p>Quem tem dó é violão
 E ela quer os brother do Funk
 Ela curtiu os cara do Rap
 Ela vem de encontro com a firma
-Que tem o dom das palavra
-Eu fico querendo revanche
+Que tem o dom das palavra</p>
+<p>>Eu fico querendo revanche
 Mas ela nem se intromete
 Ela senta no meu colo
-E eu só digo aulas
-Ela é meu probleminha diário
+E eu só digo aulas</p>
+<p>Ela é meu probleminha diário
 Que eu sempre gosto de resolver
 Parou de responder os o'tário
-Depois de me conhecer eh, eh
-Ela é meu probleminha diário
+Depois de me conhecer eh, eh</p>
+<p>Ela é meu probleminha diário
 Que eu sempre gosto de resolver
 Parou de responder os otário
-Depois de me conhecer eh, eh
+Depois de me conhecer eh, eh</p>
