--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="pt-br"></html>
 <h1>Probleminha Diário - L7nnon e Mc Hariel </h1>
 <br/>
 <p>Ela falou que gosta de flores
@@ -30,3 +32,4 @@ Depois de me conhecer eh, eh</p>
 Que eu sempre gosto de resolver
 Parou de responder os otário
 Depois de me conhecer eh, eh</p>
+</html>
