--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br"></html>
+<html lang="pt-br">
+<head></head>
+    <meta charset="UTF-8">
+    <title>LETRA DE MUSICA</title>
+<link rel="styleheet" hre="style.css">
+</head>
+<body></body>
 <h1>Probleminha Diário - L7nnon e Mc Hariel </h1>
 <br/>
 <p>Ela falou que gosta de flores
@@ -33,3 +39,4 @@ Que eu sempre gosto de resolver
 Parou de responder os otário
 Depois de me conhecer eh, eh</p>
 </html>
+</body>
