--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="styleheet" hre="style.css">
 </head>
 <body></body>
-<h1>Probleminha Diário - L7nnon e Mc Hariel </h1>
+<h1 id="titulo"><mark><b>Probleminha Diário - L7nnon e Mc Hariel </b></mark></h1>
 <br/>
 <p>Ela falou que gosta de flores
 Coloquei 40 grama dentro do buque
