--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body></body>
 <h1 id="titulo"><mark><b>Probleminha Diário - L7nnon e Mc Hariel </b></mark></h1>
 <br/>
-<p>Ela falou que gosta de flores
+<p class="texto1">Ela falou que gosta de flores
 Coloquei 40 grama dentro do buque
 Uma obra de arte, eu assinei com um tapão
 Ela que pediu, eu só segui a extrusão
