--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>LETRA DE MUSICA</title>
 <link rel="styleheet" hre="style.css">
 </head>
-<body></body>
+<body>
 <h1 id="titulo"><mark><b>Probleminha Diário - L7nnon e Mc Hariel </b></mark></h1>
 <br/>
 <p class="texto1">Ela falou que gosta de flores
@@ -16,27 +16,38 @@ Vem com a novidade em questão de posição
 E ela breca e acelera o jogo, eu só vou no embalão
 E a fita é o proibidão mesmo
 Ela quer que nós joga dentro</p>
-<p>A melodia é tranquilona
+
+<p clss="texto2">A melodia é tranquilona
 Ela senta com violência
 Ela pede tapa na venta
 Ela só quer catucadão
 Sussurra, vai com força</p>
-<p>Quem tem dó é violão
+
+<p class="texto3">Quem tem dó é violão
 E ela quer os brother do Funk
 Ela curtiu os cara do Rap
 Ela vem de encontro com a firma
 Que tem o dom das palavra</p>
-<p>>Eu fico querendo revanche
+
+<p class="texto3">>Eu fico querendo revanche
 Mas ela nem se intromete
 Ela senta no meu colo
 E eu só digo aulas</p>
-<p>Ela é meu probleminha diário
+
+<p class="texto4">Ela é meu probleminha diário
 Que eu sempre gosto de resolver
 Parou de responder os o'tário
 Depois de me conhecer eh, eh</p>
-<p>Ela é meu probleminha diário
+
+<p class="texto5">Ela é meu probleminha diário
 Que eu sempre gosto de resolver
 Parou de responder os otário
 Depois de me conhecer eh, eh</p>
-</html>
+
+<img id="foto"  src="hari7"
+
 </body>
+</html>
+
+
+
