--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Ela curtiu os cara do Rap
 Ela vem de encontro com a firma
 Que tem o dom das palavra</p>
 
-<p class="texto3">>Eu fico querendo revanche
+<p class="texto3">Eu fico querendo revanche
 Mas ela nem se intromete
 Ela senta no meu colo
 E eu só digo aulas</p>
